<resources>
    <string name="app_name">PonyTractor.ru</string>
    <string name="catalog">Каталог</string>
    <string name="equipment">Оборудование</string>
    <string name="shopcart">Корзина</string>
    <string name="geninfo">Информация</string>
    <string name="search">Поиск…</string>
    <string name="description">Описание</string>
    <string name="specifications">Характеристики</string>
    <string name="extra">Дополнительно</string>
    <string name="loading">Загрузка, пожалуйста, подождите</string>
    <string name="chooseeqtype">Навесное оборудование</string>
    <string name="front">Фронтальные погрузчики</string>
    <string name="frontextra">Органы для фронт. погрузчиков</string>
    <string name="snow">Снегоотвалы</string>
    <string name="excavator">Экскаваторы</string>
    <string name="frez">Почвофрезы</string>
    <string name="press">Пресс-подборщики</string>
    <string name="engine">Двигатель</string>
    <string name="transmission">Трансмиссия</string>
    <string name="move_part">Ходовая часть</string>
    <string name="steer">Рулевое управление</string>
    <string name="hydro_system">Гидравлическая система трактора</string>
    <string name="agr_system">Система агрегатирования</string>
    <string name="electro_system">Электросистема трактора</string>
    <string name="size">Размеры и вес трактора</string>
    <string name="fuel_volume">Объёмы заправочных жидкостей</string>
    <string name="tractor_kit">Комплектация трактора</string>
    <string name="more">Подробнее</string>
    <string name="arp">РРЦ</string>
    <string name="aop">ОПТ</string>
    <string name="build">Сборка</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="phone">Телефон</string>
    <string name="error">Каждое поле должно быть заполнено!</string>
    <string name="userdata">Укажите актуальные данные для обратной связи (их в любой момент можно будет изменить в меню информации)</string>
    <string name="delivery"><a href="http://ponytractor.ru/payment-and-delivery">Оплата и доставка</a></string>
    <string name="photo"><a href="http://ponytractor.ru/photos">Фотогалерея</a></string>
    <string name="supplier"><a href="http://ponytractor.ru/nashi-postavschiki">Наши поставщики</a></string>
    <string name="tender"><a href="http://ponytractor.ru/priglasit-v-tender">Пригласить в тендер</a></string>
    <string name="contacts"><a href="http://ponytractor.ru/kontakty">Контакты</a></string>
    <string name="about">Ваша информация:</string>
    <string name="reset">Изменить</string>
    <string name="save">Сохранить</string>
    <string name="amount">Кол-во</string>
    <string name="amountfull">Количество</string>
    <string name="reserve">Зарезервировать</string>
    <string name="hint">(фотографии можно перелистывать свайпами влево или вправо)</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="incart">Товар уже в корзине</string>
    <string name="addtocart">Добавить в корзину</string>
    <string name="total">Итого:</string>
    <string name="tractors">Тракторы</string>
    <string name="corpname">Название компании</string>
    <string name="comm">Комментарий</string>
    <string name="extracomm">Если у вас есть дополнительные пожелания, можете указать их здесь</string>
</resources>