<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/catalog"
        android:icon="@drawable/ic_catalog"
        android:title="@string/catalog"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/extra"
        android:icon="@drawable/ic_extra"
        android:title="@string/equipment"
        android:orderInCategory="2"
        />
    <item
        android:id="@+id/shopcart"
        android:icon="@drawable/ic_shopcart"
        android:title="@string/shopcart"
        android:orderInCategory="3"
        />
    <item
        android:id="@+id/geninfo"
        android:icon="@drawable/ic_geninfo"
        android:title="@string/geninfo"
        android:orderInCategory="4"
        />
</menu>