<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetUserDataActivity">

    <EditText
        android:id="@+id/fieldSurname"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/fieldName"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/fieldSurname"
        app:layout_constraintStart_toStartOf="@+id/fieldSurname"
        app:layout_constraintTop_toBottomOf="@+id/fieldSurname" />

    <EditText
        android:id="@+id/fieldPatronymic"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/patronymic"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/fieldName"
        app:layout_constraintStart_toStartOf="@+id/fieldName"
        app:layout_constraintTop_toBottomOf="@+id/fieldName" />

    <EditText
        android:id="@+id/fieldPhone"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/fieldPatronymic"
        app:layout_constraintStart_toStartOf="@+id/fieldPatronymic"
        app:layout_constraintTop_toBottomOf="@+id/fieldPatronymic" />

    <Button
        android:id="@+id/butSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/fieldPhone"
        app:layout_constraintStart_toStartOf="@+id/fieldPhone"
        app:layout_constraintTop_toBottomOf="@+id/fieldPhone" />

    <TextView
        android:id="@+id/textError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/error"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/butSave"
        app:layout_constraintEnd_toEndOf="@+id/butSave"
        app:layout_constraintStart_toStartOf="@+id/butSave" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/userdata"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>