<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TractorPageActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navMenuSimp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_simple" />

    <FrameLayout
        android:id="@+id/descFrag"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="185dp"
        app:layout_constraintBottom_toTopOf="@+id/navMenuSimp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <Button
        android:id="@+id/butReserve"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="5dp"
        android:text="@string/reserve"
        app:layout_constraintBottom_toTopOf="@+id/navMenuSimp"
        app:layout_constraintEnd_toStartOf="@+id/butMinus"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/butMinus"
        android:layout_width="42dp"
        android:layout_height="0dp"
        android:text="@string/minus"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/navMenuSimp"
        app:layout_constraintEnd_toStartOf="@+id/textAmount"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/butPlus"
        android:layout_width="42dp"
        android:layout_height="0dp"
        android:text="@string/plus"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/navMenuSimp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/textAmount"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/amount"
        android:inputType="number|phone"
        app:layout_constraintBottom_toTopOf="@+id/navMenuSimp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/butPlus" />

    <TextView
        android:id="@+id/textAlreadyInCart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/incart"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/navMenuSimp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textAOP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/aop"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textARP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/arp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textBuildPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/build"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/butReserve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/valueAOP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryVariant"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/valueARP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryVariant"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/valueBuildPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryVariant"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>